<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:icon="@drawable/ic_info_black_24dp"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"/>

    <ListPreference
        android:title="@string/pref_temperature_units_label"
        android:key="@string/pref_temperature_units_key"
        android:defaultValue="@string/pref_temperature_units_default"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:entryValues="@array/pref_temperature_unit_titles"
        android:entries="@array/pref_temperature_unit_values"/>

</PreferenceScreen>